# wren_playground

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
modules/: CMakeLists.txt
modules/posix/: util.c  wren_module_posix.c  wren_module_posix_int.h  wren_module_posix_shell.c  wren_module_posix_socket.c
modules/readline/: wren_module_readline.c  wren_module_readline.h
modules/uname/: uname.wren
src/: wren_playground.c
wren_scripts/: combined_demo.wren  demo_readline.wren  demo_shell.wren
